# ainur

./: .cursorrules  .gitignore  AGENT.md  ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  Dockerfile.orchestrator  GITHUB_SETUP.md  LICENSE  NEXT_STEPS.md  README.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_SSH.sh  SPRINT_PLAN.md  docker-compose.postgres.yml  mkdocs.yml  netlify.toml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
agents/foundation/echo-wasm/: Cargo.toml
agents/foundation/echo-wasm/src/: lib.rs
crates/ainur-core/: Cargo.toml
crates/ainur-core/src/: constants.rs  errors.rs  lib.rs  tests.rs  traits.rs  types.rs
docs/: AGENT.md  CONTRIBUTING.md  index.md  mkdocs.yml  requirements.txt  standalone.html  whitepaper.md
docs/01-INTRODUCTION/: motivation.md  overview.md  problem-statement.md  solution-approach.md
docs/03-ARCHITECTURE/: overview.md
docs/architecture/: l1-temporal.md  l3-p2p.md  l4-aacl.md  l5-runtime.md  l6-economics.md  overview.md  technical-specifications.md
docs/architecture-structure/: design-principles.md  layer-1-temporal.md  layer-3-aether.md  layer-5-cognition.md  layer-6-koinos.md
docs/guides/: first-agent.md  installation.md  quickstart.md
docs/introduction/: motivation.md  overview.md
docs/operations/: monitoring.md  orchestrator-storage.md  troubleshooting.md  validator.md
docs/overrides/: main.html
docs/protocol-specs/: aacl-standard.md  ari-specification.md  did-method.md
docs/sdk/: python.md  rust.md  typescript.md
docs/specs/: aacl.md  ari.md  did.md
docs/stylesheets/: custom.css
orchestrator/api/: Cargo.toml  README.md  RUNBOOK.md  alerts.prom.yml
orchestrator/api/migrations/: 20240411120000_init.sql  20240411123000_outbound_extrinsics.sql  20251122013000_outbox_retry.sql  20251122020000_chain_columns.sql  20251122030000_outbox_constraints.sql  20251122031000_outbox_status_enum.sql  20251122032000_outbox_correlation.sql  20251122040000_bid_result_enrichment.sql  20251122050000_task_matched.sql
orchestrator/api/src/: chain.rs  config.rs  error.rs  execution.rs  lib.rs  main.rs  model.rs  storage.rs
orchestrator/api/tests/: outbox_chain.rs  postgres_devnet.rs
runtimes/wasm-rust/: Cargo.toml
runtimes/wasm-rust/src/: lib.rs
scripts/: Caddyfile.alice  Caddyfile.orchestrator  Caddyfile.rpc  DEPLOY-NOW.sh  FIX-SSH-ACCESS.md  add-ssh-key.sh  add-ssh-keys-auto.sh  bootstrap.sh  check-env.sh  create-doc-stubs.sh  deploy-orchestrator.sh  deploy-validator.sh  deploy-vercel.sh  dev-postgres.sh  inject-ssh-key-via-api.sh  install-deps.sh  install-substrate-tools.sh  pg-trust.sh  quick-deploy-all.sh  setup-caddy.sh  test-ssh.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
specs/: ari-v2.wit
web/: DEPLOYMENT.md  netlify.toml  package-lock.json  package.json  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/api/waitlist/: route.ts
web/src/app/console/: layout.tsx  page.tsx
web/src/app/console/agents/: page.tsx
web/src/app/console/agents/[did]/: page.tsx
web/src/app/console/agents/new/: page.tsx
web/src/app/console/faucet/: page.tsx
web/src/app/console/status/: page.tsx
web/src/app/console/tasks/: page.tsx
web/src/app/console/tasks/[id]/: page.tsx
web/src/app/console/tasks/create/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/docs/api/: page.tsx
web/src/app/whitepaper/: page.tsx
web/src/components/aceternity/: typewriter-effect.tsx
web/src/components/console/: metric-card.tsx  sidebar.tsx  step-track.tsx
web/src/components/landing/: feature-grid.tsx  hero.tsx  hivemind-hero.tsx  whitepaper-preview.tsx
web/src/components/layout/: footer.tsx  header.tsx  navbar.tsx
web/src/components/magicui/: animated-grid-pattern.tsx  animated-shiny-text.tsx  aurora-text.tsx  border-beam.tsx  number-ticker.tsx
web/src/components/sections/: approach.tsx  architecture.tsx  cta.tsx  hero.tsx  layer-stack.tsx  problem.tsx  stats.tsx  status.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  living-background.tsx
web/src/lib/: config.ts  orchestrator.ts  use-chain.ts  use-extrinsic.ts  wallet-context.tsx
