[workspace]
resolver = "2"
members = [
    "crates/ainur-core",
    # Uncomment as crates are created:
    # "chain/node",
    # "chain/pallets/*",
    # "chain/runtime",
    # "crates/*",
    # "orchestrator/api",
    # "orchestrator/services/*",
    # "runtimes/wasm-rust",
    # "sdk/rust",
    # "tools/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Ainur Protocol Contributors"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://ainur.ai"
repository = "https://github.com/ainur-protocol/ainur"

[workspace.dependencies]
# Substrate dependencies
sp-core = { version = "28.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
frame-system = { version = "28.0.0", default-features = false }
frame-support = { version = "28.0.0", default-features = false }
pallet-balances = { version = "28.0.0", default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parity-scale-codec = { version = "3.6", features = ["derive"] }
scale-info = { version = "2.10", features = ["derive"] }

# Cryptography
libp2p = { version = "0.53", features = ["kad", "gossipsub", "mdns", "noise", "tcp", "yamux", "websocket"] }
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
sha3 = "0.10"

# Testing
proptest = "1.4"
criterion = "0.5"
