[package]
name = "ainur-wasm-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Cognition WASM runtime for executing Ainur agents"

[lib]
name = "ainur_wasm_runtime"
path = "src/lib.rs"

[dependencies]
ainur-agent-sdk = { path = "../../sdk/rust" }
anyhow = "1.0"
wasmtime = { version = "27.0.0", features = ["component-model"] }


